# sandbox-dlai-mcp-anthropic

./: .gitignore  README.md  pyproject.toml  requirements.txt
mcp_project/: mcp_chatbots.py  pyproject.toml  results.md  server_config.json
nb/: L3.ipynb  L4.ipynb
scripts/: arxiv_chatbot.py
