[project]
name = "sandbox-dlai-mcp-anthropic"
version = "0.1.0"
description = "Learning how to use MCP (Model Context Protocol)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic==0.67.0",
    "arxiv==2.2.0",
    "jupyterlab==4.4.7",
    "ollama==0.5.3",
    "python-dotenv==1.1.1",
]

[project.optional-dependencies]
dev = [
    "black",
    "isort",
    "mypy",
    "pytest",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.uv]
dev-dependencies = [
    "black>=24.0.0",
    "isort>=5.13.0",
    "mypy>=1.8.0",
    "pytest>=8.0.0",
]

[tool.uv.workspace]
members = [
    "mcp_project",
]

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
